# todop

./: README.md  install.sh  pyproject.toml  todop  todop.py
src/todop/: __main__.py  cli.py  todop.py
