[project]
name = "todop"
version = "0.5.0-alpha"
description = "Small terminal todo-list"
authors = [
    {name = "emzilia",email = "you@example.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
tdp = "todop.cli:app.process_args"
